@@ -4,6 +4,10 @@ ChangeLog for Pylint
 --
     * bitbucket #6: put back documentation in source distribution
 
+    * Added a new base class and interface for checkers that work on the
+      tokens rather than the syntax, and only tokenize the input file
+      once.
+
 2013-04-25  --  0.28.0
     * bitbucket #1: fix "dictionary changed size during iteration" crash
 
